WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38847
REGRESSION (
r59001
): 11 media tests are failing on Windows
https://bugs.webkit.org/show_bug.cgi?id=38847
Summary
REGRESSION (r59001): 11 media tests are failing on Windows
Adam Roben (:aroben)
Reported
2010-05-10 08:35:59 PDT
Since
r59001
, 11 media tests have been failing on Windows.
Attachments
QTMovie, QTMovieTask fixes
(5.85 KB, patch)
2010-05-10 21:45 PDT
,
Jer Noble
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-05-10 08:36:32 PDT
<
rdar://problem/7962997
>
Jer Noble
Comment 2
2010-05-10 21:45:27 PDT
Created
attachment 55660
[details]
QTMovie, QTMovieTask fixes
Jer Noble
Comment 3
2010-05-11 09:26:22 PDT
Testing 93 test cases. media ............................................................................................. 59.59s total testing time all 93 test cases succeeded
Sam Weinig
Comment 4
2010-05-11 09:47:36 PDT
Landed in
r59155
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug